--- a/Server/mods/deathmatch/mtaserver.conf
+++ b/Server/mods/deathmatch/mtaserver.conf
@@ -224,6 +224,11 @@
          Available range: 25 to 32767. Default: 74. You can also use 0 for uncapped fps. -->
     <fpslimit>74</fpslimit>
 
+    <!-- Specifies the frame rate limit that applies to the server console.
+	 Available range: 25 to 100. Default: 30. You can also use 0 for frames per second. -->
+    <server_logic_fps_limit>30</server_logic_fps_limit>
+    <donkey_work_interval>1000</donkey_work_interval>
+
     <!-- This parameter specifies whether or not to enable player voice chat in-game
          Values: 0 - disabled , 1 - enabled -->
     <voice>0</voice>
