--- a/Server/mods/deathmatch/mtaserver.conf
+++ b/Server/mods/deathmatch/mtaserver.conf
@@ -1,4 +1,6 @@
 <config>
+    <!-- Generate license key in http://ir-mp.ir/license and paste license in serverlicense -->
+    <serverlicense></serverlicense>
 
     <!-- This parameter specifies the name the server will be visible as in the ingame server browser
          and on Game-Monitor. It is a required parameter. -->
