--- a/Server/mods/deathmatch/mtaserver.conf
+++ b/Server/mods/deathmatch/mtaserver.conf
@@ -2,7 +2,7 @@
 
     <!-- This parameter specifies the name the server will be visible as in the ingame server browser
          and on Game-Monitor. It is a required parameter. -->
-    <servername>Default MTA Server</servername>
+    <servername>Default IRMP Server</servername>
 
     <!-- The rule parameters are optional settings that the server will make public for the server browser/list.
          A brief description of the server. -->
@@ -27,7 +27,7 @@
     <rule name="social_url_3" value="" />
 
     <!-- This parameter specifies the contact email addresses for the owner(s) of this server.
-         The email addresses will not be publicly available, and only used by MTA administrators
+         The email addresses will not be publicly available, and only used by IRMP administrators
          to contact the server owner.
          Note: Missing or incorrect owner_email_address can affect visibility in the master server list.
          Values: Comma separated list of email addresses -->
@@ -243,7 +243,7 @@
     <voice_quality>4</voice_quality>
 
     <!-- Specifies the voice bitrate, in bps. This optional parameter overrides the previous two settings.
-         If not set, MTA handles this automatically.  Use with care. -->
+         If not set, IRMP handles this automatically.  Use with care. -->
     <!-- <voice_bitrate>24600</voice_bitrate> -->
 
     <!-- This parameter specifies the path to use for a basic backup of some server files.
@@ -266,7 +266,7 @@
          Values: 0 - Never, 1 - On server start only after basic backup, 2 - On server start always.  Default - 1 -->
     <compact_internal_databases>1</compact_internal_databases>
 
-    <!-- This parameter specifies whether server crash dump files should be sent to MTA HQ.
+    <!-- This parameter specifies whether server crash dump files should be sent to IRMP HQ.
          Values: 0 - Off, 1 - On. Default - 1 -->
     <crash_dump_upload>1</crash_dump_upload>
 
