--- a/Server/mods/deathmatch/mtaserver.conf
+++ b/Server/mods/deathmatch/mtaserver.conf
@@ -224,7 +224,7 @@
          Available range: 25 to 32767. Default: 74. You can also use 0 for uncapped fps. -->
     <fpslimit>74</fpslimit>
 
-    <!-- FPS Server Shoma Az 16 Ta 100 Ghaleb Taghir Ast (Besorat Pishfarz 16 Ast) -->
+    <!-- FPS Console Server Shoma Az 16 Ta 100 Ghaleb Taghir Ast (Besorat Pishfarz 16 Ast) -->
     <server_logic_fps_limit>16</server_logic_fps_limit>
     <donkey_work_interval>1000</donkey_work_interval>
 
