--- a/Server/mods/deathmatch/mtaserver.conf
+++ b/Server/mods/deathmatch/mtaserver.conf
@@ -184,6 +184,9 @@
     <!-- in parametre hadaksar tedad copy haye backup ro ke bayad negahdari beshe moshakhas mikone. tanzim backup_copies be 0 backup ha ro gheire fa'al mikone. meghdar dar dastres: 0 ta 100. pishfarz - 5 -->
     <backup_copies>5</backup_copies>
 
+    <!-- in parametre moshakhas mikone ke dakhel server vaghti chati miad poshtesh [HH:MM]: biad ya na (bishfarz 0 ast, baray neshan dadan 1 bezarid)  -->
+    <chat_log_time>0</chat_log_time>
+
     <!-- in parametre moshakhas mikone ke database haye sqlite dakheli che vaght bayad defragment beshan. http://www.sqlite.org/lang_vacuum.html maghadir: 0 - Hich vaght, 1 - Faghat dar start server ba'd az backup asasi, 2 - Hamishe dar start server. pishfarz - 1 -->
     <compact_internal_databases>1</compact_internal_databases>
 
