Change MTA: San Andreas To IRMP: San Andreas

--- a/Client/loader/loader.rc
+++ b/Client/loader/loader.rc
@@ -82,7 +82,7 @@ END
 
 IDD_CRASHED_DIALOG DIALOGEX 0, 0, 385, 265
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "MTA: San Andreas has encountered a problem"
+CAPTION "IRMP: San Andreas has encountered a problem"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Yes",IDOK,134,244,50,14
@@ -92,13 +92,13 @@ BEGIN
     CTEXT           "Doing so will increase the chance of this crash being fixed.",IDC_SEND_DESC_STATIC,21,189,336,14
     GROUPBOX        "",IDC_STATIC,15,161,348,51
     GROUPBOX        "Crash information",IDC_CRASH_HEAD,7,7,371,146,BS_CENTER
-    CTEXT           "Do you want to restart MTA: San Andreas ?",IDC_RESTART_QUESTION_STATIC,24,227,330,10
+    CTEXT           "Do you want to restart IRMP: San Andreas ?",IDC_RESTART_QUESTION_STATIC,24,227,330,10
     EDITTEXT        IDC_CRASH_INFO_EDIT,39,22,304,118,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
 IDD_D3DDLL_DIALOG DIALOGEX 0, 0, 373, 236
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "MTA: San Andreas - Warning"
+CAPTION "IRMP: San Andreas - Warning"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Play IRMP:SA",IDOK,153,209,67,14
@@ -116,7 +116,7 @@ END
 
 IDD_OPTIMUS_DIALOG DIALOGEX 0, 0, 238, 260
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "MTA: San Andreas - Confusing options"
+CAPTION "IRMP: San Andreas - Confusing options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,171,239,50,14
@@ -136,7 +136,7 @@ END
 
 IDD_NOAV_DIALOG DIALOGEX 0, 0, 316, 183
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "MTA: San Andreas"
+CAPTION "IRMP: San Andreas"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,231,162,50,14
